# helsa

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  database.py  main.py  models.py  requirements.txt
app/core/: config.py  exceptions.py  logging.py  security.py  types.py
app/models/: consultation.py  search.py  security.py  user.py
app/repositories/: user_repository.py
app/routers/: access.py  admin.py  auth.py  constants.py  diagnose.py
app/services/: auth_service.py  constants.py  image_service.py  prompt_service.py  search_service.py
src/helsa/: database.py  main.py
src/helsa/core/: config.py  exceptions.py  logging.py  security.py  types.py
src/helsa/models/: search.py
src/helsa/repositories/: user_repository.py
src/helsa/routers/: access.py  admin.py  constants.py  diagnose.py
src/helsa/services/: auth_service.py  constants.py  image_service.py  prompt_service.py  search_service.py
