[project]
name = "helsa"
version = "0.1.0"
description = "AI Health Advisor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi~=0.115.12",
    "passlib~=1.7.4",
    "pydantic~=2.11.3",
    "pyjwt~=2.10.1",
    "sqlmodel~=0.0.24",
    "starlette~=0.46.1",
]
