[project]
name = "helsa"
version = "0.1.0"
description = "AI Health Advisor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyJWT~=2.10.1",
    "fastapi~=0.115.12",
    "passlib~=1.7.4",
    "sqlmodel~=0.0.24",
    "pydantic~=2.11.3",
    "openai~=1.76.0",
    "pydantic-settings~=2.9.1",
    "uvicorn~=0.34.1",
    "pillow~=11.2.1",
]
